--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^4.4.0",
     "firebase": "^10.5.2",
+    "moment": "^2.29.4",
+    "ng2-charts": "^5.0.3",
+    "ngx-otp-input": "^0.11.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
